# wordsearch

./: .gitignore  README.md  pyproject.toml  test_wordsearch.py  trie.py  wordsearch.py
tests/: test_grid.py  test_wordsearch.py
tests/data/: __init__.py  grid.txt  test_words.json  trie.json  words.json  words.txt
tests/utils/: test_files.py  test_grid.py  test_trie.py
utils/: __init__.py  files.py  generation.py  grid.py  trie.py
