[tool.poetry]
name = "wordsearch"
version = "0.1.0"
description = ""
authors = ["Benjamin Doerry <ben.doerry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = ">=1.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-benchmark = "^3.2.3"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"